--- a/templates/password-display.html
+++ b/templates/password-display.html
@@ -5,135 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>SecureSites</title> <!-- Website title -->
-    <link rel="shortcut icon" href="img/securesite.ico" />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/securesite.ico') }}" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+
 </head>
 <body class = "bg-primary">
-  <nav class="navbar navbar-expand-sm navbar-light fixed-top py-80 card bg-secondary text-white mb-3" id="main-nav">
-    <div class="container my-lg-auto">
-      <a href="securesites.html" class="navbar-brand my-auto">
-        <img src="img/securesite.jpeg" alt=":)" width="50" height="50">
-      </a>
-      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarcollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    <div class="collapse navbar-collapse" id="navbarcollapse">
-        <ul class="navbar-nav mx-auto">
-          <li class="nav-item">
-            <a href="Sign-In.html" class="nav-link">Sign In </a>
-          </li>
-          <li class="nav-item">
-            <a href="Sign-Up.html" class="nav-link"> Sign Up</a>
-          </li>
-          <li class="nav-item">
-            <a href="password-display.html" class="nav-link"> Password Display</a>
-          </li>
-        </ul>
-      </div>
-      </div>
-  </nav>
-  <br><br><br><br><br><br>
-  <div class="card text-center col-lg-4 mx-auto">
-      <div class="card-body">
-        <h4 class="card-title">Welcome Back To
-          <br> Internet Security</h4>
-          <br>
-          <table class="table table-borderless">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>Website:</th>
-                <th>Key:</th>
-              </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mail.google.com</td>
-                    <td><a class="btn btn-outline-primary" href = "https://youtube.com" name="key" type="submit" value="🔑"/>🔑</a></td>
 
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Youtube.com</td>
-                    <td><a class="btn btn-outline-primary" href = "https://youtube.com" name="key" type="submit" value="🔑"/>🔑</a></td>
+  <div class="container2">
+  </div>
 
-                </tr>
-                <tr>
-                  <th scope="row">3</th><!-- ROW 3 -->
-                  <td>Netflix.com</td>
-
-                   <td>
-                     <a class="btn btn-outline-primary" href = "password.html" name="key" type="submit" value="🔑"/>
-                     🔑</a>
-                     <!-- Button trigger modal -->
-                     <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#exampleModalCenter">
-                       🔑
-                     </button>
-
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                      <div class="modal-dialog modal-dialog-centered" role="document">
-                        <div class="modal-content">
-                          <div class="modal-header">
-                            <h5 class="modal-title mx-auto" id="exampleModalLongTitle">SecureSites</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                              <span aria-hidden="true">&times;</span>
-                            </button>
-                          </div>
-                          <div class="modal-body">
-                            <div class="card-body">
-                                <h6 class="card-text"> Saved Password: </h6>
-                                  <table class="table table-borderless">
-                                    <thead>
-                                      <tr>
-                                        <th>Website:</th>
-                                        <th>Key:</th>
-                                      </tr>
-                                    </thead>
-                                    <tbody>
-                                      <tr>
-                                        <td>youtube.com</td>
-                                        <td><a class="btn btn-outline-primary" href = "https://youtube.com" name="key" type="submit" id = "clb" value="🔑"/>parik123</a></td>
-                                      </tr>
-                                    </td>
-                                    <p>hi</p>
-                                    </tbody>
-                            </div>
-                          </div>
-                            <p>"hi"</p>
-                        </div>
-                        </div>
-                      </div>
-                      <p>hi</p>
-                    </div>
-                  </td>
-                </tr>
-
-            </tbody>
-
-        </table>
-
-        </div>
-        <br>
-        <a class="btn btn-outline-success" href = "password.html" name="key" type="submit" value="+"/>+</a>
-        <a class="btn btn-outline-danger" href = "password.html" name="key" type="submit" value="-"/>-</a>
-        <br><br>
-              <small class="text-muted">§</small>
-          </p>
-
-
-      </div>
-      <br>
-      <a class="btn btn-outline-success" href = "password.html" name="key" type="submit" value="+"/>+</a>
-      <a class="btn btn-outline-danger" href = "password.html" name="key" type="submit" value="-"/>-</a>
-      <br><br>
-            <small class="text-muted">§</small>
-        </p>
+<script>
+  let jsonfile = JSON.parse({{jsonfile|tojson}});
+  console.log(jsonfile);
+  document.getElementById(".container2").innerHTML = JSON.stringify(jsonfile, null, 2);;
+</script>
 <script>
 // When the user clicks on <div>, open the popup
 function myFunction() {
@@ -185,6 +74,7 @@ function myFunction() {
         console.log('slid - this fires when img stops')
         });
       </script>
+
 
 
       <br>
