--- a/templates/Sign-Up.html
+++ b/templates/Sign-Up.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>SecureSites</title> <!-- Website title -->
-    <link rel="shortcut icon" href="img/securesite.ico" />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/securesite.ico') }}" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
@@ -38,8 +38,8 @@
   </nav> -->
   <br>
   <div class="card-img-top img-fluid text-center mx-auto" width = "20" height = "20">
-    <a href="securesites.html" class="navbar-brand">
-      <img class = "img-fluid mx-auto" src = "img/securesitemini.jpeg">
+    <a href="/" class="navbar-brand">
+      <img class = "img-fluid mx-auto" src = "{{ url_for('static', filename='img/securesitemini.jpeg') }}">
     </a>
 </div>
   <br><br>
@@ -48,7 +48,7 @@
                     <h4 class="card-title">Welcome Back To
                       <br> Internet Security</h4>
                     <br>
-                    <form action="/login" method="post">
+                    <form action="/signup" method="post">
                       <label for="name">Name: </label><br>
                       <input type="text" name="nameID"></input>
                       <br>
@@ -61,11 +61,10 @@
                       <label for="confirmmasterkey">Confirm Master Key: </label><br>
                       <input type="password" name="confirmmasterkeyID"></input>
                       <br><br>
-                    <input class="btn btn-outline-primary" name="Login" type="submit" value="Login"/></input>
+                    <input class="btn btn-outline-primary" name="submit" type="submit" value="Login"/></input>
                   </form>
                   <br>
                         <small class="text-muted">§</small>
-                    </p>
                 </div>
             </div>
 
