--- a/templates/password.html
+++ b/templates/password.html
@@ -15,7 +15,7 @@
 <body>
   <br>
   <div class="card-img-top img-fluid text-center mx-auto" width = "20" height = "20">
-    <a href="securesites.html" class="navbar-brand">
+    <a href="/" class="navbar-brand">
       <img class = "img-fluid mx-auto" src = "img/securesitemini.jpeg">
     </a>
 </div>
