--- a/templates/success.html
+++ b/templates/success.html
@@ -35,34 +35,36 @@
           </li>
         </ul>
       </div>
-  </nav>
-  <br><br><br><br><br> -->
+  </nav> -->
   <br>
   <div class="card-img-top img-fluid text-center mx-auto" width = "20" height = "20">
-    <a href="/" class="navbar-brand">
+    <a href="securesites.html" class="navbar-brand">
       <img class = "img-fluid mx-auto" src = "{{ url_for('static', filename='img/securesitemini.jpeg') }}">
     </a>
 </div>
-  <br>
+  <br><br>
   <div class="card text-center col-lg-4 mx-auto">
                 <div class="card-body">
                     <h4 class="card-title">Welcome Back To
                       <br> Internet Security</h4>
                     <br>
-                    <form action="/login" method="post">
+                    <form action="/signup" method="post">
+                      <label for="name">Name: </label><br>
+                      <input type="text" name="nameID"></input>
+                      <br>
                       <label for="email">Email: </label><br>
                       <input type="text" name="emailID"></input>
-                      <br>
                       <br>
                       <label for="masterkey">Master Key: </label><br>
                       <input type="password" name="masterkeyID"></input>
                       <br>
-                      <br>
-                    <input class="btn btn-outline-primary" name="Login" type="submit" value="Login"/></input>
+                      <label for="confirmmasterkey">Confirm Master Key: </label><br>
+                      <input type="password" name="confirmmasterkeyID"></input>
+                      <br><br>
+                    <input class="btn btn-outline-primary" name="submit" type="submit" value="Login"></input>
                   </form>
                   <br>
                         <small class="text-muted">§</small>
-                    </p>
                 </div>
             </div>
 
